--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-prompt": "^0.1.2",
     "gulp-tap": "^0.1.3",
     "gulp-zip": "^3.0.2",
+    "lodash": "^3.8.0",
     "through2": "^0.6.5"
   }
 }
