--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "fs-extra": "^0.18.3",
     "gulp": "^3.8.11",
     "gulp-debug": "^2.0.1",
+    "gulp-file": "^0.2.0",
     "gulp-foreach": "^0.1.0",
     "gulp-insert": "^0.4.0",
     "gulp-jsforce-deploy": "^1.0.1",
     "gulp-prompt": "^0.1.2",
     "gulp-tap": "^0.1.3",
+    "gulp-unzip": "^0.1.3",
     "gulp-zip": "^3.0.2",
+    "jsforce": "^1.4.1",
     "lodash": "^3.8.0",
     "through2": "^0.6.5"
   }
