Add missing dependency: vinyl

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-zip": "^3.0.2",
     "jsforce": "^1.4.1",
     "lodash": "^3.8.0",
-    "through2": "^0.6.5"
+    "through2": "^0.6.5",
+    "vinyl": "^0.4.6"
   }
 }
