Change default root directory to cwd.

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "rootDir": "example",
+  "rootDir": ".",
   "endpoint": "https://login.salesforce.com",
   "retrievedPkgPath": "retrievedPkg"
 }
